--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-torch>=1.1
-torchvision>=0.3
+# torch>=1.1
+# torchvision>=0.3
 numpy
-opencv-python
+# opencv-python
 tqdm>=4.36.0
 matplotlib
 plotly
 scipy
 h5py
-pycolmap>=0.6.0
-kornia>=0.6.11
+# pycolmap>=0.6.0
+# kornia>=0.6.11
 gdown
-lightglue @ git+https://github.com/cvg/LightGlue
+# lightglue @ git+https://github.com/cvg/LightGlue
